fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,6 @@ html{
     background-color: #585454;
     overflow-x: hidden;
 }
+body {
+    overflow-x: hidden;
+}
